# niceday-api/api/openapi.yaml
@@ -67,6 +67,14 @@ paths:
         "200":
           description: Success
       x-swagger-router-controller: UserData
+  /connectionrequests:
+    get:
+      summary: Get the pending connection requests
+      operationId: getConnectionRequests
+      responses:
+        "200":
+          description: Success
+      x-swagger-router-controller: ConnectionRequests
   /usertrackers/smoking/{userId}:
     get:
       summary: Get smoking tracker data for specific user
@@ -106,6 +114,26 @@ paths:
                 items:
                   $ref: '#/components/schemas/SmokingTrackerEntry'
       x-swagger-router-controller: UserTrackers
+  /acceptconnection:
+    post:
+      summary: Accept the connection request specified in the body
+      operationId: setAcceptConnectionRequests
+      requestBody:
+        content:
+          application/json:
+            schema:
+              required:
+                - invitaton_id
+              type: object
+              properties:
+                invitaton_id:
+                  type: string
+                  description: ID of the connection request
+                  example: "38527"
+      responses:
+        "200":
+          description: Success
+      x-swagger-router-controller: ConnectionRequests
   /usertrackers/statuses:
     post:
       summary: Enable or disable trackers for a user
